Shift to client-server model fix chaimeleon-eu/jobman#59, fix asalic/jobman#47

--- a/src/webservice/settings.json
+++ b/src/webservice/settings.json
@@ -24,18 +24,23 @@
             "predefined": []
         }
     },
-    "newVersion": {
-        "repository": null,
-        "packageJsonPath": null,
-        "customMessage": null,
-        "check": "24h"
-    },
     "kubeConfig": {
         "type": "file",
         "file": "/kube_config.json"
     },
     "harbor": {
         "url": "https://harbor.chaimeleon-eu.i3m.upv.es",
-        "project": "chaimeleon-library-batch"
-    }
+        "project": "chaimeleon-library-batch",
+        "projectProtected":"chaimeleon-library-batch-protected",
+        "projectProtectedToken": ""
+    },
+    "oidc": {
+
+        "url": "",
+        "realm": "CHAIMELEON",
+        "clientId": "jobman-service",
+        "clientSecret": ""
+    },
+    "port": 9000,
+    "path": "/"
 }
