--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
   "name": "jobman",
-  "version": "1.3.16-BETA",
+  "version": "2.0.0-BETA",
   "main": "./dist/index.ts",
   "exports": {
     "default": "./src/"
   },
   "bin": {
-    "jobman": "./bin/jobman"
+    "jobman": "./bin/jobman",
+    "jobman-webservice": "./bin/jobman-webservice"
   },
   "description": "The Kubernetes job manager",
   "dependencies": {
     "@kubernetes/client-node": "^0.18.1",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@tsconfig/node18-strictest-esm": "^1.0.1",
-    "@types/marked": "^4.0.8",
-    "@types/marked-terminal": "^3.1.3",
-    "@types/node-fetch": "^2.6.2",
-    "@types/uuid": "^9.0.0",
-    "babel-plugin-transform-import-meta": "^2.2.0",
-    "console-table-printer": "^2.11.1",
+    "@types/express": "^4.17.21",
+    "@types/node-fetch": "^2.6.11",
+    "@types/uuid": "^9.0.8",
+    "@types/node": "^20.12.13",
+    "babel-plugin-transform-import-meta": "^2.2.1",
+    "console-table-printer": "^2.12.0",
     "deepmerge": "^4.3.1",
-    "jest": "^29.0.5",
-    "loglevel": "^1.8.1",
-    "marked": "^4.2.12",
-    "marked-terminal": "^5.1.1",
-    "node-fetch": "^3.3.0",
+    "loglevel": "^1.9.1",
+    "marked": "^9.1.6",
+    "marked-terminal": "^6.1.1",
+    "node-fetch":"^3.3.2",
     "tar-stream": "3.1.5",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.4.1",
-    "typescript": "^4.6.3",
-    "uuid": "^9.0.0",
-    "zlib": "1.0.5"
+    "typescript": "^5.4.5",
+    "uuid": "^9.0.1",
+    "zlib": "^1.0.5",
+    "express": "^4.19.2",
+    "http-errors": "^2.0.0",
+    "http-proxy-middleware": "2.0.3"
   },
   "plugins": [
     "babel-plugin-transform-import-meta"
   ],
   "scripts": {
-    "start": "ts-node-esm src/index.ts",
-    "prod": "node dist/index.js",
+    "start": "ts-node-esm src/client/index.ts",
+    "prod": "node dist/client/index.js",
     "dev": "nodemon --exec 'npm start'",
+    "start-webservice": "ts-node-esm src/webservice/index.ts",
+    "prod-webservice": "node dist/webservice/index.js",
+    "dev-webservice": "nodemon --exec 'npm start-webservice'",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
     "build": "node_modules/.bin/tsc"
   },
@@ -54,22 +55,23 @@
   },
   "homepage": "https://github.com/asalic/jobman#readme",
   "resolutions": {
-    "@typescript-eslint/parser": "^5.30.5",
-    "@typescript-eslint/eslint-plugin": "^5.30.5"
+    "@typescript-eslint/parser": "^7.11.0",
+    "@typescript-eslint/eslint-plugin": "^7.11.0"
   },
   "devDependencies": {
-    "@jest/globals": "^29.0.5",
-    "@types/jest": "^29.0.5",
-    "@types/node": "^18.11.18",
-    "@types/tar-stream": "^2.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "eslint": "^8.34.0",
+    "ts-node": "^10.9.2",
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.13",
+    "@types/tar-stream": "^3.1.3",
+    "@types/express": "4.17.21",
+    "@types/marked": "^6.0.0",
+    "@types/marked-terminal": "^6.1.1",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
     "ts-jest": "^29.0.5",
-    "tslib": "^2.4.1",
-    "typescript": "^4.6.3"
+    "tslib": "^2.6.2",
+    "typescript": "^5.4.5"
   },
   "type": "module"
 }
