--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,6 @@
     "include": ["./src/**/*.ts", "./src/**/*.json"],
     "exclude": ["./test", "./node_modules", "./dist", "./bin"],
         "$schema": "https://json.schemastore.org/tsconfig",
-        "extends": "@tsconfig/node18-strictest-esm/tsconfig.json",
-        "display": "Node 18 + ESM + Strict(est)",
         "compilerOptions": {
           "allowSyntheticDefaultImports": true,
           "sourceMap": true,
@@ -32,7 +30,7 @@
           "checkJs": true,
           "resolveJsonModule": true,
           "strictPropertyInitialization": false,
-          "importsNotUsedAsValues": "preserve"
+          "verbatimModuleSyntax": true
         },
         "compileOnSave": true
   }
