Functional server client fix chaimeleon-eu/jobman#61, fix asalic/jobman#48

--- a/src/client/settings.json
+++ b/src/client/settings.json
@@ -6,5 +6,5 @@
         "check": "24h"
     },
     "webServiceUrl": "",
-    "apiTokenEnvName": "JOBMAN_API_TOKEN"
+    "apiTokenEnvName": "JOBMAN_SERVICE_API_TOKEN"
 }
