--- a/package.json
+++ b/package.json
@@ -12,10 +12,6 @@
   "description": "The Kubernetes job manager",
   "dependencies": {
     "@kubernetes/client-node": "^0.18.1",
-    "@types/express": "^4.17.21",
-    "@types/node-fetch": "^2.6.11",
-    "@types/uuid": "^9.0.8",
-    "@types/node": "^20.12.13",
     "babel-plugin-transform-import-meta": "^2.2.1",
     "console-table-printer": "^2.12.0",
     "deepmerge": "^4.3.1",
@@ -24,7 +20,6 @@
     "marked-terminal": "^6.1.1",
     "node-fetch":"^3.3.2",
     "tar-stream": "3.1.5",
-    "typescript": "^5.4.5",
     "uuid": "^9.0.1",
     "zlib": "^1.0.5",
     "express": "^4.19.2",
@@ -42,7 +37,7 @@
     "prod-webservice": "node dist/webservice/index.js",
     "dev-webservice": "nodemon --exec 'npm start-webservice'",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
-    "build": "node_modules/.bin/tsc"
+    "build": "node_modules/.bin/tsc && cp usage.md ./dist/"
   },
   "repository": {
     "type": "git",
