Client has to get the datasets list from en en var with customizable name fix chaimeleon-eu/jobman#67, fix asalic/jobman#54

--- a/src/client/settings.json
+++ b/src/client/settings.json
@@ -5,6 +5,7 @@
         "customMessage": null,
         "check": "24h"
     },
+    "datasetsListEnvVar": "DATASETS_LIST",
     "webServiceUrl": "",
     "apiTokenEnvName": "JOBMAN_SERVICE_API_TOKEN"
 }
