--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "marked-terminal": "^6.1.1",
     "node-fetch":"^3.3.2",
     "tar-stream": "3.1.5",
-    "uuid": "^9.0.1",
+    "uuid": "^10.0.0",
     "zlib": "^1.0.5",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
@@ -62,6 +62,7 @@
     "@types/express": "4.17.21",
     "@types/marked": "^6.0.0",
     "@types/marked-terminal": "^6.1.1",
+    "@types/uuid": "10.0.0",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
     "ts-jest": "^29.0.5",
