Add ingress for jobman service fix chaimeleon-eu/jobman#90, fix asalic/jobman/issues/79

--- a/k8s/webservice.yml
+++ b/k8s/webservice.yml
@@ -142,3 +142,29 @@ spec:
       - name: webservice-configmap
         configMap:
           name: webservice-config
+
+---
+
+kind: Ingress
+apiVersion: networking.k8s.io/v1
+metadata:
+  name: jobman-ingress
+  namespace: jobman-service
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/backend-protocol: HTTP
+    nginx.ingress.kubernetes.io/enable-cors: 'true'
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/use-regex: 'true'
+spec:
+  rules:
+    - host: chaimeleon-eu.i3m.upv.es
+      http:
+        paths:
+          - path: /jobman-service(/|$)(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: jobman-service
+                port:
+                  number: 8080
